<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    tools:context=".Verify">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="150dp"
        android:text="@string/judulverify"
        android:textColor="@color/background"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="40dp"
        android:gravity="center"
        android:text="@string/paragraf"
        android:textSize="16sp"
        android:textColor="@color/background"
        />

    <Button
        android:background="@drawable/bg_lightblue"
        android:id="@+id/loginbtn"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_below="@+id/text2"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:text="@string/verify"
        android:textColor="@color/background"
        android:textSize="15sp"
        android:onClick="verify"/>

</RelativeLayout>