<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userhome">

    <ImageView
        android:id="@+id/ic_header"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@drawable/ic_header_profile"
        />

    <ImageView
        android:id="@+id/menu_sidebar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_side_menu" />

    <ImageView
        android:id="@+id/notif"
        android:layout_toRightOf="@+id/menu_sidebar"
        android:layout_toEndOf="@+id/menu_sidebar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_notification"

        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/profileakb"
        app:civ_border_color="#fff"
        app:civ_border_width="2dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/nama"
        android:layout_below="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:text="@string/nama"
        android:textSize="30sp"
        android:textColor="@color/lightblue"
        />

    <TextView
        android:id="@+id/goldarah"
        android:layout_below="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="55dp"
        android:text="@string/goldarah"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/separator"
        android:layout_width="500dp"
        android:layout_height="85dp"
        android:layout_below="@id/goldarah"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_userhome" />

    <TextView
        android:id="@+id/bloodgive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goldarah"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="24dp"
        android:text="75"
        android:textColor="@color/lightblue"
        android:textSize="40sp" />


    <TextView
        android:id="@+id/bloodgivetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bloodgive"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="-2dp"
        android:text="BLOOD GIVE"
        android:textColor="@color/fontdesc"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/bloodreceived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goldarah"
        android:layout_toRightOf="@+id/bloodgive"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="24dp"
        android:text="100"
        android:textColor="@color/lightblue"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/bloodreceivedtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bloodreceived"
        android:layout_toRightOf="@id/bloodgivetext"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="-2dp"
        android:text="BLOOD RECEIVED"
        android:textColor="@color/fontdesc"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goldarah"
        android:layout_toRightOf="@+id/bloodreceived"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="24dp"
        android:text="330"
        android:textColor="@color/lightblue"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/thankstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thanks"
        android:layout_toRightOf="@id/bloodreceivedtext"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="-2dp"
        android:text="THANKS"
        android:textColor="@color/fontdesc"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/searchdonor"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/separator"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/ic_search_donor" />

    <ImageView
        android:id="@+id/bloodneed"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/separator"
        android:layout_toRightOf="@id/searchdonor"
        android:layout_toEndOf="@+id/searchdonor"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="100dp"
        android:background="@drawable/ic_blood_needed"/>

    <TextView
        android:id="@+id/searchdonortext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchdonor"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/searchdonor"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/searchdonor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchdonortext"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="-2dp"
        android:text="@string/searchdonor1"
        android:textColor="@color/fontdesc"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/bloodneeded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bloodneed"
        android:layout_toRightOf="@+id/searchdonor"
        android:layout_toEndOf="@id/searchdonor"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="5dp"
        android:text="@string/bloodneed"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/bloodneeded1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchdonortext"
        android:layout_toRightOf="@+id/searchdonor1"
        android:layout_toEndOf="@+id/searchdonor1"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="-2dp"
        android:text="@string/bloodneed1"
        android:gravity="center"
        android:textColor="@color/fontdesc"
        android:textSize="12sp"
        />


    <ImageView
        android:id="@+id/pesan"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/searchdonor1"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/ic_message"/>

    <ImageView
        android:id="@+id/donorhistory"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/bloodneeded1"
        android:layout_toRightOf="@id/pesan"
        android:layout_toEndOf="@+id/pesan"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="100dp"
        android:background="@drawable/ic_donor_history"/>

    <TextView
        android:id="@+id/pesantext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pesan"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/pesan"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/pesantext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pesantext"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="4dp"
        android:text="@string/searchdonor1"
        android:textColor="@color/fontdesc"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/donor_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donorhistory"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/pesantext"
        android:layout_toRightOf="@+id/pesantext"
        android:text="@string/donorhistory"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/donor_history1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donor_history"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/pesantext1"
        android:layout_toRightOf="@+id/pesantext1"
        android:text="@string/donorhistory1"
        android:textColor="@color/fontdesc"
        android:textSize="12sp" />
</RelativeLayout>